RESOLVED FIXED305230
3rd party frame blocked by web content filter does not display error as main frame
https://bugs.webkit.org/show_bug.cgi?id=305230
Summary 3rd party frame blocked by web content filter does not display error as main ...
jlee53
Reported 2026-01-09 15:06:45 PST
In current implementation, WebKit only displays error page when main frame is blocked by web content filter.
Attachments
jlee53
Comment 1 2026-01-09 15:09:23 PST
jlee53
Comment 2 2026-01-09 15:10:51 PST
EWS
Comment 3 2026-01-12 14:54:47 PST
Committed 305480@main (a7afc75ce49b): <https://commits.webkit.org/305480@main> Reviewed commits have been landed. Closing PR #56365 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.