3rd party frame blocked by web content filter does not display error as main frame https://bugs.webkit.org/show_bug.cgi?id=305230 rdar://163595989

Reviewed by Sihui Liu.

We make an exception to always allow the blocked page's fallback content.

No new tests needed.
* Source/WebCore/loader/MixedContentChecker.cpp:
(WebCore::MixedContentChecker::shouldBlockRequest):

Canonical link: https://commits.webkit.org/305480@main